# deployment-queue-api

./: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docs/: CODESTYLE.md  USAGE.md
scripts/: verify_connection.py
sql/: schema.sql
src/deployment_queue/: __init__.py  auth.py  config.py  database.py  main.py  management.py  metrics.py  models.py  server.py
tests/: __init__.py  conftest.py  test_auth.py  test_endpoints.py  test_management.py  test_models.py
